plein de modifs

--- a/Econometrie/projet/rendu.qmd
+++ b/Econometrie/projet/rendu.qmd
@@ -16,6 +16,7 @@ format:
 knitr::opts_chunk$set(cache = TRUE) #Activer le cache des chunks pour accélérer les recompilations
 options("install.lock"=FALSE) #Désactiver le verrouillage d’installation des packages
 setwd(dirname(rstudioapi::getActiveDocumentContext()$path)) ## configure le chemin du dossier automatiquement
+knitr::opts_chunk$set(warning=FALSE, message=FALSE)
 ```
 
 **JAOUEN Denis - GEINDRE Colin**
@@ -78,19 +79,12 @@ expliquer les variables utilisées, les unités et les sources + Faire un tablea
 
 ```{r}
 # import des données
-data = read.csv(file = 'Econometrie/projet/donnees.csv')[,-1]
+data = read.csv(file = 'donnees.csv')[,-1]
 summary(data)
 head(data)
 ```
 
 Vous devez décrire les données utilisées dans la modélisation, après nettoyage.
-
-```{r}
-# corrplot
-library(corrplot)
-# analyse sans Country.name et Code
-corrplot(cor(data[,-c(1,2)]), method="shade", type = "lower", tl.col="black", tl.srt=45)
-```
 
 -   Tableau de statistiques descriptives = données quantitatives / catégorielles
 
@@ -122,19 +116,22 @@ ggplot(data, aes(y=happiness_moyenne)) +
 
 -   Distribution / boxplot / histogramme, pour chaque variable, arrangé en grille pour visualiser tout d'un coup.
 
-```{r}
+```{r, fig.height=12, fig.width=12}
 plots <- list()
 
 for (i in 3:ncol(data)) {
   p <- ggplot(data, aes_string(x=data[[i]])) +
     geom_histogram(binwidth=diff(range(data[[i]]))/30, fill="green", color="black", alpha=0.7) +
-    labs(title=paste("Histogramme de", colnames(data)[i]), x=colnames(data)[i], y="Fréquence") +
-    theme_minimal()
+    labs(x=colnames(data)[i], y="") +
+    theme_minimal() +
+    theme(plot.margin = grid::unit(c(0.5,0.5,0.5,0.5), "cm"))
   plots[[i-2]] <- p
 }
 
 library(gridExtra)
-do.call("grid.arrange", c(plots, ncol=3))
+# nombre de colonnes voulu
+ncol_plot <- 2
+do.call(grid.arrange, c(plots, ncol = ncol_plot))
 ```
 
 ## Analyse descriptive bivariée des données
@@ -143,13 +140,90 @@ Vous devez décrire vos données vis à vis de votre variable à expliquer
 
 -   corrélation vis à vis de Y
 
+```{r, fig.height=4, fig.width=6}
+# Corrélations simples et affichage graphique (base R)
+vars <- names(data)[-c(1,2,ncol(data))]
+cors <- sapply(vars, function(v) cor(data$happiness_moyenne, data[[v]]))
+# trier par valeur (pour barplot horizontal)
+cors_sorted <- sort(cors)
+par(mar = c(5, 8, 4, 2))
+barplot(cors_sorted, horiz = TRUE, las = 1,
+  # gradient color from cor
+  col = viridis::viridis(length(cors_sorted), alpha = 0.8)[rank(cors_sorted)],
+  xlab = "Corrélation avec happiness_moyenne",
+  main = "Corrélations des variables explicatives")
+abline(v = 0, lty = 2, col = "grey40")
+par(mar = c(5, 4, 4, 2) + 0.1)
+```
+
 -   nuage de point vis à vis de Y
 
+```{r, fig.height=12, fig.width=12}
+scatter_plots <- list()
+
+for (i in 3:ncol(data[,-ncol(data)])) {
+  p <- ggplot(data, aes_string(x=data[[i]], y="happiness_moyenne")) +
+    geom_point() +
+    geom_smooth(method=lm , color="red", fill="#69b3a2", se=TRUE) +
+    labs(x=colnames(data)[i], y="Hapiness") +
+    theme_minimal()
+  scatter_plots[[i-2]] <- p
+}
+
+library(gridExtra)
+# nombre de colonnes voulu
+ncol_plot <- 3
+do.call(grid.arrange, c(scatter_plots, ncol = ncol_plot))
+
+```
+
 -   Corrélation entre les variables explicatives
+
+```{r}
+# corrplot
+library(corrplot)
+# analyse sans Country.name et Code, et sans happiness moyenne
+corrplot(cor(data[,-c(1,2,ncol(data))]), method="shade", type = "lower", tl.col="black", tl.srt=45)
+```
 
 # **Analyse et discussion des résultats**
 
 ## Modélisation principale
+
+```{r}
+# premier modèle : toutes les variables candidates
+reg1 <- lm(happiness_moyenne ~ GDP_per_capita + KWH_pp_pc + PoliticalCorruption_Index +
+             Lifespan_At_Birth + Netmigration + Overweight + Population_density +
+             Military_expenditure + Pop_Growth,
+           data = data)
+
+cat('\n--- Résumé du modèle (reg1) ---\n')
+print(summary(reg1))
+```
+
+```{r}
+# VIF pour contrôler la multicolinéarité (si package car installé)
+if (requireNamespace('car', quietly = TRUE)) {
+  library(car)
+  cat('\nVIF:\n')
+  print(vif(reg1))
+} else cat('\nInstaller le package car pour calculer le VIF : install.packages("car")\n')
+
+# Test d'hétéroscédasticité (Breusch-Pagan) et coefficients robustes HC1
+if (requireNamespace('lmtest', quietly = TRUE) && requireNamespace('sandwich', quietly = TRUE)) {
+  library(lmtest); library(sandwich)
+  cat('\nBreusch-Pagan test :\n')
+  print(bptest(reg1))
+
+  cat('\nCoefficients avec erreurs robustes (HC1) :\n')
+  print(lmtest::coeftest(reg1, vcov. = sandwich::vcovHC(reg1, type = 'HC1')))
+} else cat('\nInstaller lmtest et sandwich pour tests et erreurs robustes\n')
+
+# Diagnostics graphiques rapides
+par(mfrow = c(2,2))
+plot(reg1)
+par(mfrow = c(1,1))
+```
 
 Présentation et interprétation des résultats obtenus : utiliser un tableau récapitulatif des modèles principaux testés
 
